# mishmash

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_auth_social_pow.py  003_add_api_keys_notifications.py  004_add_env_pinning_quality_changelog.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  analysis.py  api_key.py  comment.py  dataset.py  notification.py  publication.py  star.py  user.py
backend/app/routers/: analyses.py  api_keys.py  auth.py  citation.py  comments.py  datasets.py  events.py  notifications.py  publications.py  results.py  search.py  stars.py  users.py  validation.py
backend/app/schemas/: analysis.py  comment.py  dataset.py  publication.py  user.py
backend/app/services/: auth.py  dataset_service.py  notifications.py  proof_of_work.py  runner.py  storage.py  validation.py
backend/app/workers/: celery_app.py  tasks.py
cli/: pyproject.toml
cli/mishmash_cli/: main.py
frontend/: package.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/analyses/: page.tsx
frontend/src/app/datasets/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/publications/: page.tsx
frontend/src/components/: CodeEditor.tsx  CommentThread.tsx  DataTable.tsx  DatasetCard.tsx  FileUploader.tsx  Navigation.tsx  NotificationBell.tsx  StarButton.tsx
frontend/src/lib/: api.ts  auth.tsx
runner/python/: Dockerfile
runner/r/: Dockerfile
(+9 files in other folders)
