[project]
name = "mishmash-cli"
version = "0.1.0"
description = "CLI tool for running Mishmash analyses locally with proof-of-work"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
]

[project.scripts]
mishmash = "mishmash_cli.main:cli"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mishmash_cli*"]
